--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,11 +126,15 @@ h3 {
 }
 
 .text-link:hover {
-  color: #ff0000;
-  background-color: white;
+  background-color: #dd0000;
+  color: white;
   text-decoration: none;
 }
 
-/* .social-icon:hover {
-  background-color: #ff0000
-} */
+.section {
+  margin-top: 0.5rem;
+}
+
+.gallery-image img {
+  border-radius: 2px;
+}
