--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   /* justify-content: space-between; */
   align-items: center;
-  padding: 2rem;
+  padding: 2rem 0;
   min-height: 100vh;
   background-color: #de0000;
   font-family: "Arvo";
@@ -183,7 +183,7 @@
 @media (max-width: 700px) {
 
   .main {
-    padding: 1rem;
+    padding: 1rem 0;
   }
 
   .content {
