--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   /* justify-content: space-between; */
   align-items: center;
-  padding: 2rem 0;
+  padding-top: 2rem;
   min-height: 100vh;
-  background-color: #de0000;
+  background-color: #dd0000;
   font-family: "Arvo";
   color: white;
   /* color: #de0000; */
@@ -183,7 +183,7 @@
 @media (max-width: 700px) {
 
   .main {
-    padding: 1rem 0;
+    padding-top: 1rem;
   }
 
   .content {
